[gd_scene load_steps=7 format=3 uid="uid://4cgcsq56mu10"]

[ext_resource type="Script" uid="uid://d2ydvtnpxon5p" path="res://entities/player/player.gd" id="1_mab2k"]
[ext_resource type="Texture2D" uid="uid://dys3bfe50eu2c" path="res://entities/player/frog-Sheet.png" id="2_453mm"]
[ext_resource type="Texture2D" uid="uid://dfek3b73evyok" path="res://entities/pink_frog/ping_frog.png" id="3_l3c03"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dlxvd"]
radius = 14.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mab2k"]
radius = 14.0
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_453mm"]
size = Vector2(13, 11)

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 5
collision_mask = 22
script = ExtResource("1_mab2k")
speed = 250.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -3)
texture = ExtResource("2_453mm")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_dlxvd")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_mab2k")

[node name="MoveDetector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveDetector"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_453mm")

[node name="PingFrog" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
scale = Vector2(0.964286, 1)
texture = ExtResource("3_l3c03")
offset = Vector2(0, 2)

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="MoveDetector" to="." method="_on_move_detector_area_entered"]
[connection signal="area_exited" from="MoveDetector" to="." method="_on_move_detector_area_exited"]
